Add bootstrap formatting

--- a/src/resources/schedule.twig
+++ b/src/resources/schedule.twig
@@ -1,56 +1,61 @@
 {% extends "base.twig" %}
 {% block content %}
-    <div>
-        <h2>{{ schedule.name }}</h2>
-        <p>{{ schedule.description }}</p>
-        <p>Owned by: {{ schedule.owner.userID }}</p>
-        <div>
-            <h3>Schedule</h3>
-            <table>
-                <thead>
-                <tr>
-                    <th scope="col">Year</th>
-                    {% for term in terms %}
-                        <th scope="col">{{ term }}</th>
-                    {% endfor %}
-                </tr>
-                </thead>
-                <tbody>
-                {% for year in years %}
-                <tr>
-                    <th scope="row">{{ year }}</th>
-                    {% for term in terms %}
-                    <td>
-                        {% for course in schedule.addedCourses %}
-                        {% if course.term == term and course.year == year %}
-                            {{ course.course.id }}
-                        {% endif %}
-                        {% endfor %}
-                    </td>
-                    {% endfor %}
-                </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-        <div>
-            <h3>List of Courses</h3>
-            <table>
-                <thead>
-                <tr>
-                    <td>Course ID</td>
-                    <td>Term</td>
-                    <td>Year</td>
-                </tr>
-                </thead>
-                {% for course in schedule.addedCourses %}
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <h2 class="card-title">{{ schedule.name }} <small class="text-muted">(by: {{ schedule.owner.userID }})</small></h2>
+                <div class="card-body">
+                    <p class="card-text">{{ schedule.description }}</p>
+                </div>
+                <h3>Schedule</h3>
+                <table class="table">
+                    <thead class="thead-dark">
                     <tr>
-                        <td>{{ course.course.id }}</td>
-                        <td>{{ course.term }}</td>
-                        <td>{{ course.year }}</td>
+                        <th scope="col">Year</th>
+                        {% for term in terms %}
+                            <th scope="col">{{ term }}</th>
+                        {% endfor %}
                     </tr>
-                {% endfor %}
-            </table>
+                    </thead>
+                    <tbody>
+                    {% for year in years %}
+                        <tr>
+                            <th scope="row">{{ year }}</th>
+                            {% for term in terms %}
+                                <td>
+                                    {% for course in schedule.addedCourses %}
+                                        {% if course.term == term and course.year == year %}
+                                            {{ course.course.id }}
+                                        {% endif %}
+                                    {% endfor %}
+                                </td>
+                            {% endfor %}
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="col">
+            <div>
+                <h3>List of Courses</h3>
+                <table>
+                    <thead>
+                    <tr>
+                        <td>Course ID</td>
+                        <td>Term</td>
+                        <td>Year</td>
+                    </tr>
+                    </thead>
+                    {% for course in schedule.addedCourses %}
+                        <tr>
+                            <td>{{ course.course.id }}</td>
+                            <td>{{ course.term }}</td>
+                            <td>{{ course.year }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
         </div>
     </div>
 {% endblock %}
