--- a/src/resources/schedule.twig
+++ b/src/resources/schedule.twig
@@ -3,12 +3,32 @@
     <div class="row">
         <div class="col">
             <div class="card">
-                <h2 class="card-title">{{ schedule.name }} <small class="text-muted">(by: {{ schedule.owner.userID }})</small></h2>
+                <h2 class="card-title">{{ schedule.name }}
+                    <small class="text-muted">(by: {{ schedule.owner.userID }})</small>
+                </h2>
                 <div class="card-body">
                     <p class="card-text">{{ schedule.description }}</p>
                 </div>
                 <h3>Schedule</h3>
-                <table class="table">
+                <table class="table text-center">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Transfer Credits</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            {% for course in schedule.addedCourses %}
+                                {% if course.isTransferCourse %}
+                                    <div class="course border border-primary rounded my-1 p-1">{{ course.course.id }}</div>
+                                {% endif %}
+                            {% endfor %}
+                        </td>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+                <table class="table text-center">
                     <thead class="thead-dark">
                     <tr>
                         <th scope="col">Year</th>
@@ -24,8 +44,10 @@
                             {% for period in terms %}
                                 <td>
                                     {% for course in schedule.addedCourses %}
-                                        {% if course.period == period and course.year == year %}
-                                            {{ course.course.id }}
+                                        {% if course.matchesTerm(period, year) %}
+                                            <div class="course border border-primary rounded my-1 p-1">{{ course.course.id }}
+                                            <a><i class="fas fa-times text-danger"></i></a>
+                                            </div>
                                         {% endif %}
                                     {% endfor %}
                                 </td>
@@ -38,7 +60,41 @@
         </div>
         <div class="col">
             <div>
-                <h3>List of Courses</h3>
+                <h3>Add a course!</h3>
+                <form action="/schedule/{{schedule.ID}}/course/" method="post">
+                    <div class="form-group row">
+                        <label for="courseList col-form-label">Course</label>
+                        <select class="form-control" name="course" id="courseList">
+                            {% for course in availableCourses %}
+                                <option>{{ course.id }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="form-group row">
+                        <label for="periodList col-form-label">Period</label>
+                        <select class="form-control" name="period" id="periodList">
+                            {% for period in terms %}
+                                <option>{{ period }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="form-group row">
+                        <label for="yearList col-form-label">Year</label>
+                        <select class="form-control" name="year" id="yearList">
+                            {% for year in years %}
+                                <option>{{ year }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="form-group row">
+                        <button type="submit" class="btn btn-primary">Add Course!</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="col">
+            <div>
+                <h3>List of Added Courses</h3>
                 <table>
                     <thead>
                     <tr>
