--- a/src/resources/base.twig
+++ b/src/resources/base.twig
@@ -32,5 +32,6 @@
 <div id="content" class="container">
     {% block content %}{% endblock %}
 </div>
+{% block javascripts %}{% endblock %}
 </body>
 </html>
